Got data from MAL using Jikan

--- a/getting_data.ipynb
+++ b/getting_data.ipynb
@@ -3,18 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5ca5017e",
+   "id": "b260eeda",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import requests"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "847a6dac",
+   "id": "4f265935",
    "metadata": {},
    "source": [
     "# Data Sources\n",
@@ -41,11 +42,350 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b56e3917",
+   "id": "a52161f2",
    "metadata": {},
    "source": [
     "# MyAnimeList (MAL)\n",
-    "MAL has an unofficial API that we can use to get data from MAL. First, we can get the episode titles and other info, then hopefully we can use it to get the voting data from the "
+    "MAL has an unofficial API, [Jikan](jikan.moe), that we can use to get data from MAL. First, we can get the episode titles and other info, then hopefully we can use it to get the voting data from the forums.\n",
+    "\n",
+    "The entry for DBZ is [here](https://myanimelist.net/anime/813/Dragon_Ball_Z). All anime in MAL have a corresponding ID, and from the URL we see that the ID for DBZ is 813."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "f3ca0cdb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Obtaining data from jikan...\n",
+      "Getting page 1\n",
+      "Successfully got data\n",
+      "Getting page 2\n",
+      "Successfully got data\n",
+      "Getting page 3\n",
+      "Successfully got data\n",
+      "Reached last page\n"
+     ]
+    }
+   ],
+   "source": [
+    "MAL_ID = 813 # DBZ's ID in the MAL database\n",
+    "MAX_PAGES = 10 # if we reach MAX_PAGES, something might have gone wrong, \n",
+    "TIMEOUT = 1.0 # how long to wait before timing out\n",
+    "\n",
+    "# get json from jikan\n",
+    "request_list = [] # holds request objects\n",
+    "page = 1\n",
+    "print(\"Obtaining data from jikan...\")\n",
+    "next_page_exists = True\n",
+    "while page <= MAX_PAGES and next_page_exists:\n",
+    "    print(\"Getting page\",page)\n",
+    "    \n",
+    "    try:\n",
+    "        # get data\n",
+    "        r = requests.get(f\"https://api.jikan.moe/v4/anime/{MAL_ID}/episodes?page={page}\",\\\n",
+    "                        timeout=TIMEOUT)\n",
+    "    except requests.exceptions.Timeout:\n",
+    "        # exit loop if we time out\n",
+    "        print(\"Timed out on page\",page)\n",
+    "        break\n",
+    "    \n",
+    "    # append request results to list\n",
+    "    if r.status_code == 200:\n",
+    "        print(\"Successfully got data\")\n",
+    "        request_list.append(r)\n",
+    "        next_page_exists = r.json()[\"pagination\"][\"has_next_page\"]\n",
+    "    else:\n",
+    "        # if we errored, print the data and break\n",
+    "        print(f\"HTML ERROR CODE {r.status_code}\")\n",
+    "        print(r.json())\n",
+    "        break\n",
+    "    \n",
+    "    page += 1\n",
+    "\n",
+    "if not next_page_exists:\n",
+    "    print(\"Reached last page\")\n",
+    "else:\n",
+    "    print(\"ended prematurely\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "afc0cf0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mal_id</th>\n",
+       "      <th>url</th>\n",
+       "      <th>title</th>\n",
+       "      <th>title_japanese</th>\n",
+       "      <th>title_romanji</th>\n",
+       "      <th>aired</th>\n",
+       "      <th>score</th>\n",
+       "      <th>filler</th>\n",
+       "      <th>recap</th>\n",
+       "      <th>forum_url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>https://myanimelist.net/anime/813/Dragon_Ball_...</td>\n",
+       "      <td>The New Threat</td>\n",
+       "      <td>ミニ悟空はおぼっちゃま！ボク悟飯です。</td>\n",
+       "      <td>Mini Gokuu wa Obotchama! Boku Gohan Desu.</td>\n",
+       "      <td>1989-04-26T00:00:00+00:00</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>https://myanimelist.net/forum/?topicid=13008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>https://myanimelist.net/anime/813/Dragon_Ball_...</td>\n",
+       "      <td>Reunions</td>\n",
+       "      <td>史上最強の戦士は悟空の兄だった！</td>\n",
+       "      <td>Shijou Saikyou no Senshi wa Gokuu no Ani Datta!</td>\n",
+       "      <td>1989-05-03T00:00:00+00:00</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>https://myanimelist.net/forum/?topicid=13009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>https://myanimelist.net/anime/813/Dragon_Ball_...</td>\n",
+       "      <td>Unlikely Alliance</td>\n",
+       "      <td>やった！これが地上最強のコンビだ！</td>\n",
+       "      <td>Yatta! Kore ga Chijou Saikyou no Combo Da!</td>\n",
+       "      <td>1989-05-10T00:00:00+00:00</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>https://myanimelist.net/forum/?topicid=13010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>https://myanimelist.net/anime/813/Dragon_Ball_...</td>\n",
+       "      <td>Piccolo's Plan</td>\n",
+       "      <td>ピッコロの切り札！悟飯は泣きむしクン</td>\n",
+       "      <td>Pikkolo no Kirifuda! Gohan wa Nakimushikun</td>\n",
+       "      <td>1989-05-17T00:00:00+00:00</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>https://myanimelist.net/forum/?topicid=13011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>https://myanimelist.net/anime/813/Dragon_Ball_...</td>\n",
+       "      <td>Gohan's Rage</td>\n",
+       "      <td>悟空死す！ラストチャンスは一度だけ</td>\n",
+       "      <td>Gokuu Shisu! Last Chance wa Ichido Dake</td>\n",
+       "      <td>1989-05-24T00:00:00+00:00</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>https://myanimelist.net/forum/?topicid=13007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>286</th>\n",
+       "      <td>287</td>\n",
+       "      <td>https://myanimelist.net/anime/813/Dragon_Ball_...</td>\n",
+       "      <td>Celebrations with Majin Buu</td>\n",
+       "      <td>戻った平和！！正義の味方魔人ブウ！？</td>\n",
+       "      <td>Modotta Heiwa!! Seigi no Mikata Majin Buu!?</td>\n",
+       "      <td>1995-12-20T00:00:00+00:00</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>https://myanimelist.net/forum/?topicid=696097</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>287</th>\n",
+       "      <td>288</td>\n",
+       "      <td>https://myanimelist.net/anime/813/Dragon_Ball_...</td>\n",
+       "      <td>He's Always Late</td>\n",
+       "      <td>遅いぜ悟空！みんなでパーティ！！</td>\n",
+       "      <td>Osoi ze Gokuu! Minna de Party!!</td>\n",
+       "      <td>1996-01-10T00:00:00+00:00</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>https://myanimelist.net/forum/?topicid=696103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>288</th>\n",
+       "      <td>289</td>\n",
+       "      <td>https://myanimelist.net/anime/813/Dragon_Ball_...</td>\n",
+       "      <td>Granddaughter Pan</td>\n",
+       "      <td>悟空おじいちゃん！私がパンよ！！</td>\n",
+       "      <td>Gokuu Ojii-chan! Watashi ga Pan yo!!</td>\n",
+       "      <td>1996-01-17T00:00:00+00:00</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>https://myanimelist.net/forum/?topicid=696113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>289</th>\n",
+       "      <td>290</td>\n",
+       "      <td>https://myanimelist.net/anime/813/Dragon_Ball_...</td>\n",
+       "      <td>Buu's Reincarnation</td>\n",
+       "      <td>オイラはウーブ！今１０歳で元魔人！？</td>\n",
+       "      <td>Oira wa Oob! Ima Jussai de Moto Majin!?</td>\n",
+       "      <td>1996-01-24T00:00:00+00:00</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>https://myanimelist.net/forum/?topicid=696117</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>290</th>\n",
+       "      <td>291</td>\n",
+       "      <td>https://myanimelist.net/anime/813/Dragon_Ball_...</td>\n",
+       "      <td>Goku's Next Journey</td>\n",
+       "      <td>もっと強く！！悟空の夢は超でっけえ</td>\n",
+       "      <td>Motto Tsuyoku!! Gokuu no Yume wa Chou Dekkee</td>\n",
+       "      <td>1996-01-31T00:00:00+00:00</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>https://myanimelist.net/forum/?topicid=35456</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>291 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     mal_id                                                url  \\\n",
+       "0         1  https://myanimelist.net/anime/813/Dragon_Ball_...   \n",
+       "1         2  https://myanimelist.net/anime/813/Dragon_Ball_...   \n",
+       "2         3  https://myanimelist.net/anime/813/Dragon_Ball_...   \n",
+       "3         4  https://myanimelist.net/anime/813/Dragon_Ball_...   \n",
+       "4         5  https://myanimelist.net/anime/813/Dragon_Ball_...   \n",
+       "..      ...                                                ...   \n",
+       "286     287  https://myanimelist.net/anime/813/Dragon_Ball_...   \n",
+       "287     288  https://myanimelist.net/anime/813/Dragon_Ball_...   \n",
+       "288     289  https://myanimelist.net/anime/813/Dragon_Ball_...   \n",
+       "289     290  https://myanimelist.net/anime/813/Dragon_Ball_...   \n",
+       "290     291  https://myanimelist.net/anime/813/Dragon_Ball_...   \n",
+       "\n",
+       "                           title       title_japanese  \\\n",
+       "0                 The New Threat  ミニ悟空はおぼっちゃま！ボク悟飯です。   \n",
+       "1                       Reunions     史上最強の戦士は悟空の兄だった！   \n",
+       "2              Unlikely Alliance    やった！これが地上最強のコンビだ！   \n",
+       "3                 Piccolo's Plan   ピッコロの切り札！悟飯は泣きむしクン   \n",
+       "4                   Gohan's Rage    悟空死す！ラストチャンスは一度だけ   \n",
+       "..                           ...                  ...   \n",
+       "286  Celebrations with Majin Buu   戻った平和！！正義の味方魔人ブウ！？   \n",
+       "287             He's Always Late     遅いぜ悟空！みんなでパーティ！！   \n",
+       "288            Granddaughter Pan     悟空おじいちゃん！私がパンよ！！   \n",
+       "289          Buu's Reincarnation   オイラはウーブ！今１０歳で元魔人！？   \n",
+       "290          Goku's Next Journey    もっと強く！！悟空の夢は超でっけえ   \n",
+       "\n",
+       "                                        title_romanji  \\\n",
+       "0          Mini Gokuu wa Obotchama! Boku Gohan Desu.    \n",
+       "1    Shijou Saikyou no Senshi wa Gokuu no Ani Datta!    \n",
+       "2         Yatta! Kore ga Chijou Saikyou no Combo Da!    \n",
+       "3         Pikkolo no Kirifuda! Gohan wa Nakimushikun    \n",
+       "4            Gokuu Shisu! Last Chance wa Ichido Dake    \n",
+       "..                                                ...   \n",
+       "286      Modotta Heiwa!! Seigi no Mikata Majin Buu!?    \n",
+       "287                  Osoi ze Gokuu! Minna de Party!!    \n",
+       "288             Gokuu Ojii-chan! Watashi ga Pan yo!!    \n",
+       "289          Oira wa Oob! Ima Jussai de Moto Majin!?    \n",
+       "290     Motto Tsuyoku!! Gokuu no Yume wa Chou Dekkee    \n",
+       "\n",
+       "                         aired  score  filler  recap  \\\n",
+       "0    1989-04-26T00:00:00+00:00    4.2   False  False   \n",
+       "1    1989-05-03T00:00:00+00:00    4.4   False  False   \n",
+       "2    1989-05-10T00:00:00+00:00    4.5   False  False   \n",
+       "3    1989-05-17T00:00:00+00:00    4.6   False  False   \n",
+       "4    1989-05-24T00:00:00+00:00    4.5   False  False   \n",
+       "..                         ...    ...     ...    ...   \n",
+       "286  1995-12-20T00:00:00+00:00    4.8   False  False   \n",
+       "287  1996-01-10T00:00:00+00:00    4.5    True  False   \n",
+       "288  1996-01-17T00:00:00+00:00    4.6   False  False   \n",
+       "289  1996-01-24T00:00:00+00:00    4.6   False  False   \n",
+       "290  1996-01-31T00:00:00+00:00    4.4   False  False   \n",
+       "\n",
+       "                                         forum_url  \n",
+       "0     https://myanimelist.net/forum/?topicid=13008  \n",
+       "1     https://myanimelist.net/forum/?topicid=13009  \n",
+       "2     https://myanimelist.net/forum/?topicid=13010  \n",
+       "3     https://myanimelist.net/forum/?topicid=13011  \n",
+       "4     https://myanimelist.net/forum/?topicid=13007  \n",
+       "..                                             ...  \n",
+       "286  https://myanimelist.net/forum/?topicid=696097  \n",
+       "287  https://myanimelist.net/forum/?topicid=696103  \n",
+       "288  https://myanimelist.net/forum/?topicid=696113  \n",
+       "289  https://myanimelist.net/forum/?topicid=696117  \n",
+       "290   https://myanimelist.net/forum/?topicid=35456  \n",
+       "\n",
+       "[291 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# append data from different pages\n",
+    "mal_data = []\n",
+    "for r in request_list:\n",
+    "    mal_data = mal_data + r.json()['data']\n",
+    "mal_df = pd.DataFrame(mal_data)\n",
+    "\n",
+    "# save to a csv\n",
+    "\n",
+    "pd.to_csv()\n",
+    "mal_df"
    ]
   }
  ],
