Added little conclusion at the end of the getting the MAL data

--- a/getting_data.ipynb
+++ b/getting_data.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b260eeda",
+   "id": "ecda14c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f265935",
+   "id": "53a9c6aa",
    "metadata": {},
    "source": [
     "# Data Sources\n",
@@ -42,19 +42,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a52161f2",
+   "id": "d919077f",
    "metadata": {},
    "source": [
     "# MyAnimeList (MAL)\n",
     "MAL has an unofficial API, [Jikan](jikan.moe), that we can use to get data from MAL. First, we can get the episode titles and other info, then hopefully we can use it to get the voting data from the forums.\n",
     "\n",
-    "The entry for DBZ is [here](https://myanimelist.net/anime/813/Dragon_Ball_Z). All anime in MAL have a corresponding ID, and from the URL we see that the ID for DBZ is 813."
+    "The entry for DBZ is [here](https://myanimelist.net/anime/813/Dragon_Ball_Z). All anime in MAL have a corresponding ID, and from the URL we see that the ID for DBZ is 813.\n",
+    "\n",
+    "The below code gets data from Jikan."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "f3ca0cdb",
+   "id": "70bffa9d",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +82,7 @@
     "# get json from jikan\n",
     "request_list = [] # holds request objects\n",
     "page = 1\n",
-    "print(\"Obtaining data from jikan...\")\n",
+    "print(\"Obtaining data from Jikan...\")\n",
     "next_page_exists = True\n",
     "while page <= MAX_PAGES and next_page_exists:\n",
     "    print(\"Getting page\",page)\n",
@@ -114,10 +116,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "afc0cf0f",
+   "cell_type": "markdown",
+   "id": "aa8a508a",
    "metadata": {},
+   "source": [
+    "Now that we have out mal data, we need to append compile it into a Pandas DataFrame and save it for analysis later"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "410e560d",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -370,7 +382,7 @@
        "[291 rows x 10 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,9 +395,21 @@
     "mal_df = pd.DataFrame(mal_data)\n",
     "\n",
     "# save to a csv\n",
-    "\n",
-    "pd.to_csv()\n",
+    "MAL_FILENAME = \"data/MAL_data.csv\"\n",
+    "mal_df.to_csv(MAL_FILENAME)\n",
     "mal_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4de7b1b5",
+   "metadata": {},
+   "source": [
+    "There we go, this gives a bunch of information. Most importantly:\n",
+    "- English and japanese episode titles\n",
+    "- Each episode's score from the forums\n",
+    "- Whether each episode is a filler or recap episode\n",
+    "This is great, especially the score data. I was worried that we would have to webscrape for that since it isn't listed in the Jikan documentation, but "
    ]
   }
  ],
