Typos, formatting, grammar

--- a/getting_data.ipynb
+++ b/getting_data.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ecda14c2",
+   "id": "f045bd6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53a9c6aa",
+   "id": "b9ddd80e",
    "metadata": {},
    "source": [
     "# Data Sources\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d919077f",
+   "id": "a38ef2a6",
    "metadata": {},
    "source": [
     "# MyAnimeList (MAL)\n",
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "70bffa9d",
+   "id": "31836d3a",
    "metadata": {},
    "outputs": [
     {
@@ -117,16 +117,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa8a508a",
+   "id": "739ee62d",
    "metadata": {},
    "source": [
-    "Now that we have out mal data, we need to append compile it into a Pandas DataFrame and save it for analysis later"
+    "Now that we have out mal data, we need to append the pages then save it for later analysis."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "410e560d",
+   "id": "80fa9428",
    "metadata": {
     "scrolled": true
    },
@@ -402,14 +402,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4de7b1b5",
+   "id": "2d7bf04f",
    "metadata": {},
    "source": [
     "There we go, this gives a bunch of information. Most importantly:\n",
     "- English and japanese episode titles\n",
     "- Each episode's score from the forums\n",
     "- Whether each episode is a filler or recap episode\n",
-    "This is great, especially the score data. I was worried that we would have to webscrape for that since it isn't listed in the Jikan documentation, but "
+    "\n",
+    "This is great, especially the score data. I was worried that we would have to webscrape for that since it isn't listed in the Jikan documentation, but here it is. Makes my job a lot easier."
    ]
   }
  ],
