--- a/getting_data.ipynb
+++ b/getting_data.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "31836d3a",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Obtaining data from jikan...\n",
+      "Obtaining data from Jikan...\n",
       "Getting page 1\n",
       "Successfully got data\n",
       "Getting page 2\n",
@@ -76,43 +76,46 @@
    ],
    "source": [
     "MAL_ID = 813 # DBZ's ID in the MAL database\n",
-    "MAX_PAGES = 10 # if we reach MAX_PAGES, something might have gone wrong, \n",
-    "TIMEOUT = 1.0 # how long to wait before timing out\n",
     "\n",
-    "# get json from jikan\n",
-    "request_list = [] # holds request objects\n",
-    "page = 1\n",
-    "print(\"Obtaining data from Jikan...\")\n",
-    "next_page_exists = True\n",
-    "while page <= MAX_PAGES and next_page_exists:\n",
-    "    print(\"Getting page\",page)\n",
-    "    \n",
-    "    try:\n",
-    "        # get data\n",
-    "        r = requests.get(f\"https://api.jikan.moe/v4/anime/{MAL_ID}/episodes?page={page}\",\\\n",
-    "                        timeout=TIMEOUT)\n",
-    "    except requests.exceptions.Timeout:\n",
-    "        # exit loop if we time out\n",
-    "        print(\"Timed out on page\",page)\n",
-    "        break\n",
-    "    \n",
-    "    # append request results to list\n",
-    "    if r.status_code == 200:\n",
-    "        print(\"Successfully got data\")\n",
-    "        request_list.append(r)\n",
-    "        next_page_exists = r.json()[\"pagination\"][\"has_next_page\"]\n",
+    "def jikan_query(url):\n",
+    "    MAX_PAGES = 1000 # if we reach MAX_PAGES, something might have gone wrong, \n",
+    "    TIMEOUT = 1.0 # how long to wait before timing out\n",
+    "    JIKAN_URL = \"https://api.jikan.moe/v4/\"\n",
+    "\n",
+    "    # get json from jikan\n",
+    "    request_list = [] # holds request objects\n",
+    "    page = 1\n",
+    "    print(\"Obtaining data from Jikan...\")\n",
+    "    next_page_exists = True\n",
+    "    while page <= MAX_PAGES and next_page_exists:\n",
+    "        print(\"Getting page\",page)\n",
+    "\n",
+    "        try:\n",
+    "            # get data\n",
+    "            r = requests.get(f\"https://api.jikan.moe/v4/anime/{MAL_ID}/episodes?page={page}\",\\\n",
+    "                            timeout=TIMEOUT)\n",
+    "        except requests.exceptions.Timeout:\n",
+    "            # exit loop if we time out\n",
+    "            print(\"Timed out on page\",page)\n",
+    "            break\n",
+    "\n",
+    "        # append request results to list\n",
+    "        if r.status_code == 200:\n",
+    "            print(\"Successfully got data\")\n",
+    "            request_list.append(r)\n",
+    "            next_page_exists = r.json()[\"pagination\"][\"has_next_page\"]\n",
+    "        else:\n",
+    "            # if we errored, print the data and break\n",
+    "            print(f\"HTML ERROR CODE {r.status_code}\")\n",
+    "            print(r.json())\n",
+    "            break\n",
+    "\n",
+    "        page += 1\n",
+    "\n",
+    "    if not next_page_exists:\n",
+    "        print(\"Reached last page\")\n",
     "    else:\n",
-    "        # if we errored, print the data and break\n",
-    "        print(f\"HTML ERROR CODE {r.status_code}\")\n",
-    "        print(r.json())\n",
-    "        break\n",
-    "    \n",
-    "    page += 1\n",
-    "\n",
-    "if not next_page_exists:\n",
-    "    print(\"Reached last page\")\n",
-    "else:\n",
-    "    print(\"ended prematurely\")"
+    "        print(\"ended prematurely\")"
    ]
   },
   {
@@ -125,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "id": "80fa9428",
    "metadata": {
     "scrolled": true
@@ -382,7 +385,7 @@
        "[291 rows x 10 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,6 +415,62 @@
     "\n",
     "This is great, especially the score data. I was worried that we would have to webscrape for that since it isn't listed in the Jikan documentation, but here it is. Makes my job a lot easier."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1ecca95d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n",
+      "<re.Match object; span=(14, 25), match='Episode 291'>\n",
+      "<class 'dict'>\n",
+      "<re.Match object; span=(14, 25), match='Episode 290'>\n",
+      "<class 'dict'>\n",
+      "<re.Match object; span=(14, 25), match='Episode 289'>\n",
+      "<class 'dict'>\n",
+      "<re.Match object; span=(14, 25), match='Episode 288'>\n",
+      "<class 'dict'>\n",
+      "<re.Match object; span=(14, 25), match='Episode 287'>\n",
+      "<class 'dict'>\n",
+      "<re.Match object; span=(14, 25), match='Episode 286'>\n",
+      "<class 'dict'>\n",
+      "<re.Match object; span=(14, 25), match='Episode 285'>\n",
+      "<class 'dict'>\n",
+      "<re.Match object; span=(14, 25), match='Episode 284'>\n",
+      "<class 'dict'>\n",
+      "<re.Match object; span=(14, 25), match='Episode 283'>\n",
+      "<class 'dict'>\n",
+      "<re.Match object; span=(14, 25), match='Episode 282'>\n",
+      "<class 'dict'>\n",
+      "<re.Match object; span=(14, 25), match='Episode 281'>\n",
+      "<class 'dict'>\n",
+      "<re.Match object; span=(14, 25), match='Episode 280'>\n",
+      "<class 'dict'>\n",
+      "<re.Match object; span=(14, 25), match='Episode 279'>\n",
+      "<class 'dict'>\n",
+      "<re.Match object; span=(14, 25), match='Episode 278'>\n",
+      "<class 'dict'>\n",
+      "<re.Match object; span=(14, 25), match='Episode 277'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get number of participants in each survey\n",
+    "import re\n",
+    "r = requests.get(f\"https://api.jikan.moe/v4/anime/{MAL_ID}/forum?filter=episode\")\n",
+    "d = r.json()[\"data\"]\n",
+    "# loop through the forum discussions of each episode, which contain the polls\n",
+    "for f in d:\n",
+    "    print(type(f))\n",
+    "    epnum = re.search(\"Episode \\d+\",f[\"title\"])\n",
+    "    print(epnum)\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
@@ -430,7 +489,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
