Scraped IMDb data and saved it to data/IMDb_data.csv

--- a/getting_data.ipynb
+++ b/getting_data.ipynb
@@ -1049,6 +1049,164 @@
     "mal_df = pd.read_csv(MAL_FILENAME, index_col=0)\n",
     "mal_df"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10036653",
+   "metadata": {},
+   "source": [
+    "# IMDb\n",
+    "---\n",
+    "IMDb lists Dragon Ball Z [here](https://www.imdb.com/title/tt0214341), and has an individual rating for each episode , which is perfect for our purposes. There does look to be some episodes missing, as it only list 277 episodes compared to MAL which lists 291 episodes. Once I have the data I'll look to see what ones are missing.\n",
+    "\n",
+    "IMDb ratings are notably different to MAL ratings. Firstly, they have significantly more participants, usually in the thousands rather than the tens. Secondly, the final score is weighted to help prevent vote manipulation by bots. They don't share their method, so I'll just trust their final weighted average score.\n",
+    "\n",
+    "IMDb does have an API, but it costs money to use. So I'll just scrape what we need. Scraping IMDb is a little more tricky than scraping MAL because of how the webpages are laid out, so I'll use beautifulsoup to do the heavy lifting."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "71405dfc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting data from season -1\n",
+      "- page loaded\n",
+      "- getting episodes\n",
+      "Getting data from season 1\n",
+      "- page loaded\n",
+      "- getting episodes\n",
+      "Getting data from season 2\n",
+      "- page loaded\n",
+      "- getting episodes\n",
+      "Getting data from season 3\n",
+      "- page loaded\n",
+      "- getting episodes\n",
+      "Getting data from season 4\n",
+      "- page loaded\n",
+      "- getting episodes\n",
+      "Getting data from season 5\n",
+      "- page loaded\n",
+      "- getting episodes\n",
+      "Getting data from season 6\n",
+      "- page loaded\n",
+      "- getting episodes\n",
+      "Getting data from season 7\n",
+      "- page loaded\n",
+      "- getting episodes\n",
+      "Getting data from season 8\n",
+      "- page loaded\n",
+      "- getting episodes\n",
+      "Getting data from season 9\n",
+      "- page loaded\n",
+      "- getting episodes\n",
+      "Getting data from season 10\n",
+      "- page loaded\n",
+      "- getting episodes\n",
+      "Getting data from season 11\n",
+      "- page loaded\n",
+      "- getting episodes\n",
+      "Getting data from season 12\n",
+      "- page loaded\n",
+      "- getting episodes\n",
+      "Getting data from season 13\n",
+      "- page loaded\n",
+      "- getting episodes\n",
+      "Getting data from season 14\n",
+      "- page loaded\n",
+      "- getting episodes\n",
+      "Getting data from season 15\n",
+      "- page loaded\n",
+      "- getting episodes\n",
+      "Getting data from season 16\n",
+      "- page loaded\n",
+      "- getting episodes\n",
+      "Finished! Converting to DataFrame\n"
+     ]
+    }
+   ],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import requests\n",
+    "\n",
+    "# list of dictionaries to store data in\n",
+    "IMDb_data = []\n",
+    "\n",
+    "season_list = [-1] + list(range(1,17))\n",
+    "for season in season_list:\n",
+    "    print(\"Getting data from season\",season)\n",
+    "    URL = f\"https://www.imdb.com/title/tt0214341/episodes?season={season}\"\n",
+    "    page = requests.get(URL)\n",
+    "    \n",
+    "    if page.status_code != 200:\n",
+    "        # if we couldn't load right, show the status code and print the response\n",
+    "        print(f\"Error: HTML status code {page.status_code}\")\n",
+    "        print(\"URL:\",URL)\n",
+    "        print(\"--------------- returned text ---------------\")\n",
+    "        print(page.text)\n",
+    "        cont = \"\"\n",
+    "        while cont not in [\"y\",\"n\"]:\n",
+    "            cont = input(\"continue (y/n):\")\n",
+    "        if cont == \"n\":\n",
+    "            break\n",
+    "    \n",
+    "    print(\"- page loaded\")\n",
+    "    soup = BeautifulSoup(page.content, \"html.parser\")\n",
+    "    ep_info_html = soup.find_all(\"div\", class_=\"info\")\n",
+    "    \n",
+    "    print(\"- getting episodes\")\n",
+    "    for ep in ep_info_html:\n",
+    "        title = ep.find(\"a\", attrs={\"itemprop\":\"name\"}).text.strip()\n",
+    "        star_rating = float(ep.find(\"span\", class_=\"ipl-rating-star__rating\").text)\n",
+    "        total_votes = int(ep.find(\"span\", class_=\"ipl-rating-star__total-votes\").text[1:-1].replace(\",\",\"\"))\n",
+    "        airdate = ep.find(\"div\", class_=\"airdate\").text.strip()\n",
+    "        IMDb_data.append({\"title\":title,\\\n",
+    "                          \"star_rating\":star_rating,\\\n",
+    "                          \"total_votes\":total_votes,\\\n",
+    "                          \"aired\":airdate,\\\n",
+    "                          \"season\":season})\n",
+    "\n",
+    "print(\"Finished! Converting to DataFrame\")\n",
+    "IMDb_df = pd.DataFrame(IMDb_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "5760872a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of duplicate entries: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# find number of duplicates\n",
+    "print(f\"Number of duplicate entries: {sum(IMDb_df.duplicated())}\")\n",
+    "\n",
+    "# save to a csv\n",
+    "IMDB_FILENAME = \"data/IMDb_data.csv\"\n",
+    "IMDb_df.to_csv(IMDB_FILENAME)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fb3e4aa",
+   "metadata": {},
+   "source": [
+    "Great, we have our IMDb data, and we've saved it to a csv file. "
+   ]
   }
  ],
  "metadata": {
@@ -1067,7 +1225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
