commented IMDb scraping code

--- a/getting_data.ipynb
+++ b/getting_data.ipynb
@@ -1052,7 +1052,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10036653",
+   "id": "422dbfa4",
    "metadata": {},
    "source": [
     "# IMDb\n",
@@ -1067,7 +1067,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "71405dfc",
+   "id": "3d160de6",
    "metadata": {},
    "outputs": [
     {
@@ -1139,12 +1139,15 @@
     "# list of dictionaries to store data in\n",
     "IMDb_data = []\n",
     "\n",
+    "# loop through the IMDb pages, which are sorted by season\n",
     "season_list = [-1] + list(range(1,17))\n",
     "for season in season_list:\n",
+    "    # get page data\n",
     "    print(\"Getting data from season\",season)\n",
     "    URL = f\"https://www.imdb.com/title/tt0214341/episodes?season={season}\"\n",
     "    page = requests.get(URL)\n",
     "    \n",
+    "    # if we run into a problem do stuff\n",
     "    if page.status_code != 200:\n",
     "        # if we couldn't load right, show the status code and print the response\n",
     "        print(f\"Error: HTML status code {page.status_code}\")\n",
@@ -1157,16 +1160,21 @@
     "        if cont == \"n\":\n",
     "            break\n",
     "    \n",
+    "    # process with BeautifulSoup\n",
     "    print(\"- page loaded\")\n",
     "    soup = BeautifulSoup(page.content, \"html.parser\")\n",
+    "    # find div for each episode\n",
     "    ep_info_html = soup.find_all(\"div\", class_=\"info\")\n",
     "    \n",
+    "    # for each episode, extract the title, weighted average rating, total votes, and airdate\n",
     "    print(\"- getting episodes\")\n",
     "    for ep in ep_info_html:\n",
     "        title = ep.find(\"a\", attrs={\"itemprop\":\"name\"}).text.strip()\n",
     "        star_rating = float(ep.find(\"span\", class_=\"ipl-rating-star__rating\").text)\n",
     "        total_votes = int(ep.find(\"span\", class_=\"ipl-rating-star__total-votes\").text[1:-1].replace(\",\",\"\"))\n",
     "        airdate = ep.find(\"div\", class_=\"airdate\").text.strip()\n",
+    "        \n",
+    "        # append dictionary holding data for this episode to the IMDb_data list\n",
     "        IMDb_data.append({\"title\":title,\\\n",
     "                          \"star_rating\":star_rating,\\\n",
     "                          \"total_votes\":total_votes,\\\n",
@@ -1174,20 +1182,22 @@
     "                          \"season\":season})\n",
     "\n",
     "print(\"Finished! Converting to DataFrame\")\n",
-    "IMDb_df = pd.DataFrame(IMDb_data)"
+    "IMDb_df = pd.DataFrame(IMDb_data) # convert to a Pandas DataFrame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "5760872a",
+   "execution_count": 35,
+   "id": "7937f487",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of duplicate entries: 0\n"
+      "Number of duplicate entries: 0\n",
+      "Saving...\n",
+      "Saved\n"
      ]
     }
    ],
@@ -1196,16 +1206,18 @@
     "print(f\"Number of duplicate entries: {sum(IMDb_df.duplicated())}\")\n",
     "\n",
     "# save to a csv\n",
+    "print(\"Saving...\")\n",
     "IMDB_FILENAME = \"data/IMDb_data.csv\"\n",
-    "IMDb_df.to_csv(IMDB_FILENAME)"
+    "IMDb_df.to_csv(IMDB_FILENAME)\n",
+    "print(\"Saved\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6fb3e4aa",
+   "id": "052063d4",
    "metadata": {},
    "source": [
-    "Great, we have our IMDb data, and we've saved it to a csv file. "
+    "Great, we have our IMDb data, and we've saved it to a csv file. Now let's see what those missing episodes are"
    ]
   }
  ],
